# vdc-syspp

./: LICENSE
metal/: .dockerignore  .gitignore  CMakeLists.txt  DEBUGGING.md  DEPLOY.md  Dockerfile  INTEGRATION.md  README.md  README.md.backup  build-all.sh  build-client.sh
metal/src/: AppComponent.hpp  main.cpp
metal/src/client/: README.md  build.sh  client.cpp
metal/src/controller/: ApiController.hpp  StaticController.hpp
metal/src/framework/: Diff.hpp  JString.hpp  Patch.hpp  String.hpp  VNode.hpp  build.sh  framework.cpp  index.html
metal/src/framework/output/: framework.js  framework.wasm
metal/static/: client.js  client.wasm  index.html
